Added svm to utility list

--- a/Full_Pipeline.ipynb
+++ b/Full_Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,16 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import  SimpleImputer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.base import BaseEstimator,TransformerMixin\n"
+    "from sklearn.base import BaseEstimator,TransformerMixin\n",
+    "import warnings; warnings.simplefilter('ignore')\n",
+    "from sklearn.feature_selection import RFECV\n",
+    "from sklearn.svm import SVC\n",
+    "from mlxtend.feature_selection import SequentialFeatureSelector as SFS\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,11 +128,12 @@
     "        unwanted_category=all_category[~(all_category.isin(categorical_columns))]\n",
     "        self.df=self.df.drop(columns=unwanted_category)\n",
     "        self.reqd_features=self.df.columns\n",
-    "        col_transformer=ColumnTransformer([\n",
-    "            (\"ord\",OrdinalEncoder(),categorical_columns),\n",
-    "                ])\n",
-    "        self.encoder=col_transformer.fit_transform(self.df)\n",
-    "        self.df[categorical_columns]=self.encoder\n",
+    "        if len(self.categorical_cols)!=0:\n",
+    "            col_transformer=ColumnTransformer([\n",
+    "                (\"ord\",OrdinalEncoder(),categorical_columns),\n",
+    "                    ])\n",
+    "            self.encoder=col_transformer.fit_transform(self.df)\n",
+    "            self.df[categorical_columns]=self.encoder\n",
     "        return self.df\n",
     "    \n",
     "    '''\n",
@@ -154,18 +159,29 @@
     "    def preprocess(self,dataframe=pd.DataFrame(),test=False,want_sample=False):\n",
     "        if dataframe is None:\n",
     "            self.df=dataframe\n",
+    "        self.df=self.df.drop(columns=self.df.filter(like='Unnamed',axis=1).columns)\n",
+    "        \n",
     "        inds=['index','id','ID','Index','INDEX']\n",
-    "        id_colname=inds[np.where(np.isin(['index','id','ID','Index','INDEX'],self.df.columns))[0][0]]\n",
-    "        if id_colname:\n",
-    "            self.df=self.df.drop(columns=[id_colname])\n",
-    "        df_cols=self.df.columns\n",
+    "        print(self.df.columns)\n",
+    "        try:\n",
+    "            id_colname=inds[np.where(np.isin(['index','id','ID','Index','INDEX'],self.df.columns))[0][0]]\n",
+    "\n",
+    "            if id_colname:\n",
+    "                self.df=self.df.drop(columns=[id_colname])\n",
+    "            df_cols=self.df.columns\n",
+    "        except:\n",
+    "            df_cols=self.df.columns\n",
+    "        \n",
     "        feature_df=self.df[self.df.columns.drop([self.label_name])]\n",
     "        self.reqd_features=feature_df.columns\n",
+    "        \n",
     "        pipe=sklearn.pipeline.Pipeline([('imputer',SimpleImputer(strategy='median')),('scaler',StandardScaler())])\n",
     "        arr=pipe.fit_transform(feature_df)\n",
-    "        self.df=np.concatenate([arr,np.array(self.df[self.label_name].values).reshape(arr.shape[0],1)],axis=1)\n",
     "        \n",
-    "        self.df=pd.DataFrame(self.df,columns=df_cols)\n",
+    "        self.df=np.concatenate([arr,np.array(self.df[self.label_name].values).reshape(arr.shape[0],1)],axis=1)\n",
+    "        self.reqd_features=np.append(np.array(feature_df.columns),self.label_name)\n",
+    "        self.df=pd.DataFrame(self.df,columns=self.reqd_features)\n",
+    "       \n",
     "        \n",
     "            \n",
     "\n",
@@ -232,6 +248,14 @@
     "            rrf=RandomizedSearchCV(estimator=rf,param_distributions=param_grid,cv=3,scoring=self.scoring,verbose=2,n_iter=50,random_state=42,n_jobs=-1,refit=True)\n",
     "            rrf.fit(traindata,trainlabel)\n",
     "            joblib.dump(rrf.best_estimator_,self.model_name+ '_' +self.scoring + '_' + self.label_name)\n",
+    "            \n",
+    "        elif self.model_name in ['SVC','LinearSVC','svc']:\n",
+    "            param_grid = {'C': [0.1, 1, 10, 100, 1000]}\n",
+    "            svm=SVC(kernel='linear')\n",
+    "            svsearch=GridSearchCV(svm,param_grid,cv=3,n_jobs=-1,scoring=self.scoring)\n",
+    "            svsearch.fit(traindata,trainlabel)\n",
+    "            joblib.dump(svsearch.best_estimator_,self.model_name+ '_' +self.scoring + '_' + self.label_name)\n",
+    "            \n",
     "        \n",
     "        \n",
     "        \n",
@@ -281,28 +305,17 @@
     "        \n",
     "        statsdf=pd.DataFrame([impo,cor_mat_ranks,variance_rank]).T\n",
     "        statsdf.rename(columns={'Unnamed 0':'info gain',self.label_name:'Corelation','Unnamed 1':'Variance'},inplace=True)\n",
-    "        if self.model_name=='logistic_regression':\n",
-    "            logreg=joblib.load(self.model_name+'_'+self.scoring + '_' + self.label_name)\n",
-    "            selection=SelectFromModel(logreg,prefit=True)\n",
-    "            coeffs=pd.Series(selection.estimator.coef_.reshape((trainset.shape[1],)),index=trainset.columns)\n",
-    "            coeffs=np.abs(coeffs)\n",
-    "            # selection.get_support()\n",
-    "        elif self.model_name=='Random_Forest':\n",
-    "            rrf=joblib.load(self.model_name+'_'+self.scoring + '_' + self.label_name)\n",
-    "            coeffs=pd.Series(rrf.feature_importances_,index=trainset.columns)\n",
     "        \n",
-    "        statsdf[self.model_name+' Weights']=coeffs\n",
-    "        \n",
-    "        final_ranks=(0.01*cor_mat_ranks+0.01*impo+0.01*variance_rank+coeffs)\n",
+    "        final_ranks=(0.01*cor_mat_ranks+0.01*impo+0.01*variance_rank)\n",
     "        statsdf['Total']=final_ranks\n",
     "        \n",
     "        mean=np.mean(statsdf['Total'])\n",
-    "        deviation=np.std(statsdf['Total'])\n",
     "        final_ranks=statsdf['Total']\n",
     "        for i in dict(final_ranks):\n",
-    "            if abs(mean - final_ranks[i])>deviation and final_ranks[i]< mean:\n",
+    "            if final_ranks[i]< mean:\n",
     "                final_ranks.drop(index=[i],inplace=True)\n",
     "        self.statsdf=statsdf\n",
+    "        trainset=trainset[final_ranks.index]\n",
     "        \n",
     "\n",
     "        \n",
@@ -310,11 +323,17 @@
     "\n",
     "        \n",
     "        if refit==True:\n",
-    "            from mlxtend.feature_selection import SequentialFeatureSelector as SFS\n",
     "            model=joblib.load(self.model_name+'_'+self.scoring+ '_'+self.label_name)\n",
-    "            feature_selector=SFS(model,k_features=(1,final_ranks.shape[0]),cv=3,forward=True,floating=False,scoring=self.scoring,\n",
+    "            feature_selector=RFECV(model, step=15, cv=2,\n",
+    "            scoring=self.scoring,\n",
+    "            min_features_to_select=1,n_jobs= -1)\n",
+    "            n_selector=feature_selector.fit(trainset,trainlabel)\n",
+    "            trainset=trainset.drop(columns=trainset.columns[~n_selector.support_])\n",
+    "            \n",
+    "            \n",
+    "            feature_selector=SFS(model,k_features=(1,trainset.shape[1]),cv=2,forward=True,scoring=self.scoring,\n",
     "                                 n_jobs=-1)\n",
-    "            features=feature_selector.fit(trainset[final_ranks.index],trainlabel,custom_feature_names=final_ranks.index)\n",
+    "            features=feature_selector.fit(trainset,trainlabel,custom_feature_names=trainset.columns)\n",
     "            joblib.dump(features,'exhaustive_'+self.model_name+'_'+self.scoring+'_'+self.label_name +'_results')\n",
     "            self.best_features_=features.k_feature_names_\n",
     "            self.features=features\n",
@@ -322,6 +341,7 @@
     "            exhaust=joblib.load('exhaustive_'+self.model_name+'_'+self.scoring+'_'+self.label_name +'_results')\n",
     "            self.features=exhaust\n",
     " ##########################################################################################################################           #\n",
+    "        self.final_ranks=final_ranks\n",
     "        return self.statsdf,self.features,final_ranks\n",
     "    '''\n",
     "     Function Name:train_model\n",
@@ -372,6 +392,13 @@
     "            rrf=RandomizedSearchCV(estimator=rf,param_distributions=param_grid,cv=3,scoring=self.scoring,verbose=2,n_iter=40,random_state=42,n_jobs=-1,refit=True)\n",
     "            rrf.fit(trainset[list(best_features)],trainlabel)\n",
     "            joblib.dump(rrf.best_estimator_,'final'+self.model_name+ '_' +self.scoring + '_' + self.label_name)\n",
+    "            \n",
+    "        elif self.model_name in ['SVC','LinearSVC','svc']:\n",
+    "            param_grid = {'C': [0.1, 1, 10, 100, 1000]}\n",
+    "            svm=SVC(kernel='linear')\n",
+    "            svsearch=GridSearchCV(svm,param_grid,cv=3,n_jobs=-1,scoring=self.scoring)\n",
+    "            svsearch.fit(trainset,trainlabel)\n",
+    "            joblib.dump(svsearch.best_estimator_,'final'+self.model_name+ '_' +self.scoring + '_' + self.label_name)\n",
     "    \n",
     "        self.best_estimator=joblib.load('final'+self.model_name+ '_' +self.scoring + '_' + self.label_name)\n",
     "        \n",
@@ -452,9 +479,11 @@
     "    def transform(self,path):\n",
     "        self.df=pd.read_csv(path)\n",
     "        self.reqd_features=self.df.columns.drop([self.label_name])\n",
+    "        \n",
     "        self.transform_df=self.categorical_column_dealing(self.categorical_cols)\n",
     "        if self.want_preprocess ==True:\n",
-    "            self.transform_df,self.transform_label=self.preprocess(dataframe=self.transform_df,want_sample=True)\n",
+    "            self.transform_df,self.transform_label=self.preprocess(dataframe=self.transform_df,want_sample=False)\n",
+    "        \n",
     "        if self.first_iter==True:\n",
     "            self.train_models(self.transform_df,self.transform_label)\n",
     "        stats,best_features,filtered_features=self.features_selection(self.transform_df,self.transform_label,self.recheck)\n",
